@@ -42,6 +42,8 @@ current, file that was previously current must be unset automatically.
 
 * Added function getRefreshButton.
 
+* Fixed bug with refreshing directory, from now current file would not be seeted up to first, after refresh.
+
 
 2012.08.06, Version 0.1.5
 
